{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 162,
  "lineage": "097f9554-ed24-117a-8a69-139918586ff5",
  "resources": [
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "gateway-ingress/ztap-gateway",
            "metadata": [
              {
                "generation": 0,
                "name": "ztap-gateway",
                "namespace": "gateway-ingress",
                "resource_version": "545923",
                "uid": "47d27309-1162-440d-8a5b-5b2d68abe954"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.78.237",
                "cluster_ips": [
                  "172.20.78.237"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8001,
                    "protocol": "TCP",
                    "target_port": "8001"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "ztap-gateway"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "ztap-gateway",
            "namespace": "gateway-ingress"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.keycloak.kubernetes_config_map_v1.realm",
            "module.keycloak.kubernetes_deployment_v1.keycloak",
            "module.keycloak.kubernetes_service_v1.keycloak",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.keycloak",
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "keycloak",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "authorizer/keycloak",
            "metadata": [
              {
                "generation": 0,
                "name": "keycloak",
                "namespace": "authorizer",
                "resource_version": "275631",
                "uid": "6528e45d-4433-4986-97da-2735ddd94a69"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.250.110",
                "cluster_ips": [
                  "172.20.250.110"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "keycloak"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "keycloak",
            "namespace": "authorizer"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.namespaces",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "authorizer",
          "schema_version": 0,
          "attributes": {
            "id": "authorizer",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "ztap.io/topology": "bridge"
                },
                "name": "authorizer",
                "resource_version": "268318",
                "uid": "c48a34a1-cc74-4d27-80e9-1a6c097eb671"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "authorizer"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "gateway-ingress",
          "schema_version": 0,
          "attributes": {
            "id": "gateway-ingress",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "ztap.io/topology": "bridge"
                },
                "name": "gateway-ingress",
                "resource_version": "268316",
                "uid": "156c89da-d95d-4d5e-9d1b-b406c80b0743"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "gateway-ingress"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "inference",
          "schema_version": 0,
          "attributes": {
            "id": "inference",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "ztap.io/topology": "bridge"
                },
                "name": "inference",
                "resource_version": "268319",
                "uid": "7ea87ff1-70bc-4595-a808-fc2b4b3f0e7f"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "inference"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "monitoring",
          "schema_version": 0,
          "attributes": {
            "id": "monitoring",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "ztap.io/topology": "bridge"
                },
                "name": "monitoring",
                "resource_version": "268317",
                "uid": "b63ac94f-07ec-476d-9083-cc7523e12f79"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "monitoring"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "tenant-a",
          "schema_version": 0,
          "attributes": {
            "id": "tenant-a",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "ztap.io/tenant": "tenant-a",
                  "ztap.io/topology": "bridge"
                },
                "name": "tenant-a",
                "resource_version": "270168",
                "uid": "b45b2dc5-0089-4480-a89a-241d922848a8"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "tenant-a"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "tenant-b",
          "schema_version": 0,
          "attributes": {
            "id": "tenant-b",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "ztap.io/tenant": "tenant-b",
                  "ztap.io/topology": "bridge"
                },
                "name": "tenant-b",
                "resource_version": "270169",
                "uid": "a18b085c-7f0d-4f17-8369-5d46342a161a"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "tenant-b"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "traffic-gen",
          "schema_version": 0,
          "attributes": {
            "id": "traffic-gen",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "ztap.io/topology": "bridge"
                },
                "name": "traffic-gen",
                "resource_version": "268315",
                "uid": "0d9cb030-aa12-43be-9b1f-4cf1083a875e"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "traffic-gen"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network_policy",
      "mode": "managed",
      "type": "kubernetes_network_policy_v1",
      "name": "allow_agent_egress_to_authorizer",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "tenant-a",
          "schema_version": 0,
          "attributes": {
            "id": "tenant-a/allow-agent-egress-to-authorizer",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-agent-egress-to-authorizer",
                "namespace": "tenant-a",
                "resource_version": "818874",
                "uid": "dcc7a001-314e-4bd8-90ea-744f6a0d7e8e"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "8080",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "authorizer"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ]
                  }
                ],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-agent-egress-to-authorizer",
            "namespace": "tenant-a"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.cilium.helm_release.cilium",
            "module.cilium.kubernetes_manifest.tenant_default_deny",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "tenant-b",
          "schema_version": 0,
          "attributes": {
            "id": "tenant-b/allow-agent-egress-to-authorizer",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-agent-egress-to-authorizer",
                "namespace": "tenant-b",
                "resource_version": "818873",
                "uid": "2ae883bd-26b3-43bf-89cd-21bc1906570b"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "8080",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "authorizer"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ]
                  }
                ],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-agent-egress-to-authorizer",
            "namespace": "tenant-b"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.cilium.helm_release.cilium",
            "module.cilium.kubernetes_manifest.tenant_default_deny",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network_policy",
      "mode": "managed",
      "type": "kubernetes_network_policy_v1",
      "name": "allow_agent_egress_to_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "tenant-a",
          "schema_version": 0,
          "attributes": {
            "id": "tenant-a/allow-agent-egress-to-gateway",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-agent-egress-to-gateway",
                "namespace": "tenant-a",
                "resource_version": "818865",
                "uid": "c7105802-1d94-444a-a9e2-468087950f9e"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "8001",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "gateway-ingress"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ]
                  }
                ],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-agent-egress-to-gateway",
            "namespace": "tenant-a"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.cilium.helm_release.cilium",
            "module.cilium.kubernetes_manifest.tenant_default_deny",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "tenant-b",
          "schema_version": 0,
          "attributes": {
            "id": "tenant-b/allow-agent-egress-to-gateway",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-agent-egress-to-gateway",
                "namespace": "tenant-b",
                "resource_version": "818862",
                "uid": "482008a7-70b9-452d-94bd-6e95d118f692"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "8001",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "gateway-ingress"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ]
                  }
                ],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-agent-egress-to-gateway",
            "namespace": "tenant-b"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.cilium.helm_release.cilium",
            "module.cilium.kubernetes_manifest.tenant_default_deny",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network_policy",
      "mode": "managed",
      "type": "kubernetes_network_policy_v1",
      "name": "allow_agent_egress_to_inference",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "tenant-a",
          "schema_version": 0,
          "attributes": {
            "id": "tenant-a/allow-agent-egress-to-inference",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-agent-egress-to-inference",
                "namespace": "tenant-a",
                "resource_version": "818870",
                "uid": "8a376cf7-130e-4935-887c-24c175f946d5"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "11434",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "inference"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ]
                  }
                ],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-agent-egress-to-inference",
            "namespace": "tenant-a"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.cilium.helm_release.cilium",
            "module.cilium.kubernetes_manifest.tenant_default_deny",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "tenant-b",
          "schema_version": 0,
          "attributes": {
            "id": "tenant-b/allow-agent-egress-to-inference",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-agent-egress-to-inference",
                "namespace": "tenant-b",
                "resource_version": "818863",
                "uid": "b164218f-d021-486e-bfd5-42889179c05b"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "11434",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "inference"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ]
                  }
                ],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-agent-egress-to-inference",
            "namespace": "tenant-b"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.cilium.helm_release.cilium",
            "module.cilium.kubernetes_manifest.tenant_default_deny",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network_policy",
      "mode": "managed",
      "type": "kubernetes_network_policy_v1",
      "name": "allow_dns",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "authorizer",
          "schema_version": 0,
          "attributes": {
            "id": "authorizer/allow-dns",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-dns",
                "namespace": "authorizer",
                "resource_version": "818888",
                "uid": "c29c7691-14c6-4752-a638-f12d03952f67"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "53",
                        "protocol": "UDP"
                      },
                      {
                        "end_port": 0,
                        "port": "53",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "kube-system"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ]
                  }
                ],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-dns",
            "namespace": "authorizer"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.cilium.helm_release.cilium",
            "module.cilium.kubernetes_manifest.tenant_default_deny",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "gateway-ingress",
          "schema_version": 0,
          "attributes": {
            "id": "gateway-ingress/allow-dns",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-dns",
                "namespace": "gateway-ingress",
                "resource_version": "818890",
                "uid": "8ebfcf60-0c66-4b2f-8ab8-d17616ab79ed"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "53",
                        "protocol": "UDP"
                      },
                      {
                        "end_port": 0,
                        "port": "53",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "kube-system"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ]
                  }
                ],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-dns",
            "namespace": "gateway-ingress"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.cilium.helm_release.cilium",
            "module.cilium.kubernetes_manifest.tenant_default_deny",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "inference",
          "schema_version": 0,
          "attributes": {
            "id": "inference/allow-dns",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-dns",
                "namespace": "inference",
                "resource_version": "818889",
                "uid": "747ff23a-37be-4ae3-bbe5-f343e36c72e1"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "53",
                        "protocol": "UDP"
                      },
                      {
                        "end_port": 0,
                        "port": "53",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "kube-system"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ]
                  }
                ],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-dns",
            "namespace": "inference"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.cilium.helm_release.cilium",
            "module.cilium.kubernetes_manifest.tenant_default_deny",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "monitoring",
          "schema_version": 0,
          "attributes": {
            "id": "monitoring/allow-dns",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-dns",
                "namespace": "monitoring",
                "resource_version": "818886",
                "uid": "01288beb-f710-462c-aa43-b4881aa80de2"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "53",
                        "protocol": "UDP"
                      },
                      {
                        "end_port": 0,
                        "port": "53",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "kube-system"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ]
                  }
                ],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-dns",
            "namespace": "monitoring"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.cilium.helm_release.cilium",
            "module.cilium.kubernetes_manifest.tenant_default_deny",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "tenant-a",
          "schema_version": 0,
          "attributes": {
            "id": "tenant-a/allow-dns",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-dns",
                "namespace": "tenant-a",
                "resource_version": "818884",
                "uid": "5b1b01b3-b356-444e-a2e3-c22856659580"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "53",
                        "protocol": "UDP"
                      },
                      {
                        "end_port": 0,
                        "port": "53",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "kube-system"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ]
                  }
                ],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-dns",
            "namespace": "tenant-a"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.cilium.helm_release.cilium",
            "module.cilium.kubernetes_manifest.tenant_default_deny",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "tenant-b",
          "schema_version": 0,
          "attributes": {
            "id": "tenant-b/allow-dns",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-dns",
                "namespace": "tenant-b",
                "resource_version": "818887",
                "uid": "6313ef7f-bff8-4167-86df-8f9cf53f40ff"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "53",
                        "protocol": "UDP"
                      },
                      {
                        "end_port": 0,
                        "port": "53",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "kube-system"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ]
                  }
                ],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-dns",
            "namespace": "tenant-b"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.cilium.helm_release.cilium",
            "module.cilium.kubernetes_manifest.tenant_default_deny",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "traffic-gen",
          "schema_version": 0,
          "attributes": {
            "id": "traffic-gen/allow-dns",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-dns",
                "namespace": "traffic-gen",
                "resource_version": "818885",
                "uid": "f4dde8b4-8683-4f71-a07d-256ad3da9633"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "53",
                        "protocol": "UDP"
                      },
                      {
                        "end_port": 0,
                        "port": "53",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "kube-system"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ]
                  }
                ],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-dns",
            "namespace": "traffic-gen"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.cilium.helm_release.cilium",
            "module.cilium.kubernetes_manifest.tenant_default_deny",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network_policy",
      "mode": "managed",
      "type": "kubernetes_network_policy_v1",
      "name": "allow_gateway_egress_to_authorizer",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "gateway-ingress/allow-gateway-egress-to-authorizer",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-gateway-egress-to-authorizer",
                "namespace": "gateway-ingress",
                "resource_version": "818869",
                "uid": "b30b1b8e-70be-4017-aed2-a4ddb2a7b9fe"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "8080",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "authorizer"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ]
                  }
                ],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-gateway-egress-to-authorizer",
            "namespace": "gateway-ingress"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.cilium.helm_release.cilium",
            "module.cilium.kubernetes_manifest.tenant_default_deny",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network_policy",
      "mode": "managed",
      "type": "kubernetes_network_policy_v1",
      "name": "allow_inference_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "inference/allow-inference-egress-internet",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-inference-egress-internet",
                "namespace": "inference",
                "resource_version": "818866",
                "uid": "d5a7f7c5-37a6-4f5f-800b-9f4d732a3d14"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "443",
                        "protocol": "TCP"
                      }
                    ],
                    "to": []
                  }
                ],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-inference-egress-internet",
            "namespace": "inference"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.cilium.helm_release.cilium",
            "module.cilium.kubernetes_manifest.tenant_default_deny",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network_policy",
      "mode": "managed",
      "type": "kubernetes_network_policy_v1",
      "name": "allow_ingress_from_tenants_and_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "authorizer/allow-ingress-from-tenants-and-gateway",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-ingress-from-tenants-and-gateway",
                "namespace": "authorizer",
                "resource_version": "818871",
                "uid": "53a80585-2d16-458e-bd1a-0ce0c71bcdcb"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "tenant-a"
                            }
                          }
                        ],
                        "pod_selector": []
                      },
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "tenant-b"
                            }
                          }
                        ],
                        "pod_selector": []
                      },
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "gateway-ingress"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ],
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "8080",
                        "protocol": "TCP"
                      }
                    ]
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-ingress-from-tenants-and-gateway",
            "namespace": "authorizer"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.cilium.helm_release.cilium",
            "module.cilium.kubernetes_manifest.tenant_default_deny",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network_policy",
      "mode": "managed",
      "type": "kubernetes_network_policy_v1",
      "name": "allow_ingress_from_tenants_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "gateway-ingress/allow-ingress-from-tenants",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-ingress-from-tenants",
                "namespace": "gateway-ingress",
                "resource_version": "818868",
                "uid": "ca65eb75-7193-45df-b383-66026090ba0b"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "tenant-a"
                            }
                          }
                        ],
                        "pod_selector": []
                      },
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "tenant-b"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ],
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "8001",
                        "protocol": "TCP"
                      }
                    ]
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-ingress-from-tenants",
            "namespace": "gateway-ingress"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.cilium.helm_release.cilium",
            "module.cilium.kubernetes_manifest.tenant_default_deny",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network_policy",
      "mode": "managed",
      "type": "kubernetes_network_policy_v1",
      "name": "allow_ingress_from_tenants_inference",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "inference/allow-ingress-from-tenants",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-ingress-from-tenants",
                "namespace": "inference",
                "resource_version": "818867",
                "uid": "2bcdcb3e-781b-4d17-b6ee-424c76d2fbe1"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "tenant-a"
                            }
                          }
                        ],
                        "pod_selector": []
                      },
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "tenant-b"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ],
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "11434",
                        "protocol": "TCP"
                      }
                    ]
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "allow-ingress-from-tenants",
            "namespace": "inference"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.cilium.helm_release.cilium",
            "module.cilium.kubernetes_manifest.tenant_default_deny",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network_policy",
      "mode": "managed",
      "type": "kubernetes_network_policy_v1",
      "name": "default_deny_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": "authorizer",
          "schema_version": 0,
          "attributes": {
            "id": "authorizer/default-deny-all",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "default-deny-all",
                "namespace": "authorizer",
                "resource_version": "818881",
                "uid": "e33440cb-a79c-48dd-93e5-698bc09ad8ce"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "default-deny-all",
            "namespace": "authorizer"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.cilium.helm_release.cilium",
            "module.cilium.kubernetes_manifest.tenant_default_deny",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "gateway-ingress",
          "schema_version": 0,
          "attributes": {
            "id": "gateway-ingress/default-deny-all",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "default-deny-all",
                "namespace": "gateway-ingress",
                "resource_version": "818883",
                "uid": "e6523c0f-a76c-46e3-bcc5-657f7648a646"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "default-deny-all",
            "namespace": "gateway-ingress"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.cilium.helm_release.cilium",
            "module.cilium.kubernetes_manifest.tenant_default_deny",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "inference",
          "schema_version": 0,
          "attributes": {
            "id": "inference/default-deny-all",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "default-deny-all",
                "namespace": "inference",
                "resource_version": "818879",
                "uid": "cf9fc1ac-fcb5-4fb7-bbc9-ac3d7032e18a"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "default-deny-all",
            "namespace": "inference"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.cilium.helm_release.cilium",
            "module.cilium.kubernetes_manifest.tenant_default_deny",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "monitoring",
          "schema_version": 0,
          "attributes": {
            "id": "monitoring/default-deny-all",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "default-deny-all",
                "namespace": "monitoring",
                "resource_version": "818882",
                "uid": "26b19282-3efc-49cd-8c83-bfbbabc78e1c"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "default-deny-all",
            "namespace": "monitoring"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.cilium.helm_release.cilium",
            "module.cilium.kubernetes_manifest.tenant_default_deny",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "tenant-a",
          "schema_version": 0,
          "attributes": {
            "id": "tenant-a/default-deny-all",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "default-deny-all",
                "namespace": "tenant-a",
                "resource_version": "818876",
                "uid": "b36931b2-f497-4d2e-8551-5f65a3a4afbc"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "default-deny-all",
            "namespace": "tenant-a"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.cilium.helm_release.cilium",
            "module.cilium.kubernetes_manifest.tenant_default_deny",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "tenant-b",
          "schema_version": 0,
          "attributes": {
            "id": "tenant-b/default-deny-all",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "default-deny-all",
                "namespace": "tenant-b",
                "resource_version": "818878",
                "uid": "b233a50c-a342-44e8-995f-75f2cacb63ed"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "default-deny-all",
            "namespace": "tenant-b"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.cilium.helm_release.cilium",
            "module.cilium.kubernetes_manifest.tenant_default_deny",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "traffic-gen",
          "schema_version": 0,
          "attributes": {
            "id": "traffic-gen/default-deny-all",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "default-deny-all",
                "namespace": "traffic-gen",
                "resource_version": "818875",
                "uid": "ebc87e14-2e22-457f-9293-3aedd77f0ad6"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "api_version": "networking.k8s.io/v1",
            "kind": "NetworkPolicy",
            "name": "default-deny-all",
            "namespace": "traffic-gen"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.cilium.helm_release.cilium",
            "module.cilium.kubernetes_manifest.tenant_default_deny",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ollama",
      "mode": "managed",
      "type": "kubernetes_service_v1",
      "name": "ollama",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "inference/ollama",
            "metadata": [
              {
                "generation": 0,
                "name": "ollama",
                "namespace": "inference",
                "resource_version": "570419",
                "uid": "e276cc08-6859-4d9c-863d-9f02d080853e"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.164.206",
                "cluster_ips": [
                  "172.20.164.206"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 11434,
                    "protocol": "TCP",
                    "target_port": "11434"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "ollama"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Service",
            "name": "ollama",
            "namespace": "inference"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.this",
            "module.eks_cluster.aws_eks_cluster.this",
            "module.eks_cluster.aws_iam_role.cluster",
            "module.eks_cluster.aws_iam_role_policy_attachment.cluster_policy",
            "module.namespaces.kubernetes_namespace_v1.this",
            "module.node_group.aws_eks_node_group.this",
            "module.node_group.aws_iam_role.node",
            "module.node_group.aws_iam_role_policy_attachment.cni",
            "module.node_group.aws_iam_role_policy_attachment.ecr_read",
            "module.node_group.aws_iam_role_policy_attachment.worker_node",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789288816621:internet-gateway/igw-0c7f10befa461fb0e",
            "id": "igw-0c7f10befa461fb0e",
            "owner_id": "789288816621",
            "region": "us-east-1",
            "tags": {
              "Name": "ztap-bridge-igw"
            },
            "tags_all": {
              "Name": "ztap-bridge-igw"
            },
            "vpc_id": "vpc-058b10507160622b9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "789288816621",
            "id": "igw-0c7f10befa461fb0e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789288816621:route-table/rtb-04d99e245f552983f",
            "id": "rtb-04d99e245f552983f",
            "owner_id": "789288816621",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c7f10befa461fb0e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ztap-bridge-rt"
            },
            "tags_all": {
              "Name": "ztap-bridge-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-058b10507160622b9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "789288816621",
            "id": "rtb-04d99e245f552983f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051fa18976ad88be2",
            "region": "us-east-1",
            "route_table_id": "rtb-04d99e245f552983f",
            "subnet_id": "subnet-0760a1ccfccfbd12e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "789288816621",
            "id": "rtbassoc-051fa18976ad88be2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e7957bd7f81cc76",
            "region": "us-east-1",
            "route_table_id": "rtb-04d99e245f552983f",
            "subnet_id": "subnet-0372bcb3974a249e0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "789288816621",
            "id": "rtbassoc-09e7957bd7f81cc76",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.this",
            "module.vpc.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "shared",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789288816621:security-group/sg-03ab3d7c167f68a69",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ab3d7c167f68a69",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "ztap-bridge-sg-shared",
            "name_prefix": "",
            "owner_id": "789288816621",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ztap-bridge-sg-shared"
            },
            "tags_all": {
              "Name": "ztap-bridge-sg-shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-058b10507160622b9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "789288816621",
            "id": "sg-03ab3d7c167f68a69",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789288816621:subnet/subnet-0760a1ccfccfbd12e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0760a1ccfccfbd12e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "789288816621",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ztap-bridge-subnet-0",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ztap-bridge-subnet-0",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-058b10507160622b9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "789288816621",
            "id": "subnet-0760a1ccfccfbd12e",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789288816621:subnet/subnet-0372bcb3974a249e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0372bcb3974a249e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "789288816621",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ztap-bridge-subnet-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ztap-bridge-subnet-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-058b10507160622b9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "789288816621",
            "id": "subnet-0372bcb3974a249e0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:789288816621:vpc/vpc-058b10507160622b9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e0965262576a3657",
            "default_route_table_id": "rtb-09aed0821808b8c44",
            "default_security_group_id": "sg-010cb71e185d09bb1",
            "dhcp_options_id": "dopt-0748554270d72ed62",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-058b10507160622b9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09aed0821808b8c44",
            "owner_id": "789288816621",
            "region": "us-east-1",
            "tags": {
              "Name": "ztap-bridge-vpc"
            },
            "tags_all": {
              "Name": "ztap-bridge-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "789288816621",
            "id": "vpc-058b10507160622b9",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}